--- a/src/Data preparation.Rmd
+++ b/src/Data preparation.Rmd
@@ -11,7 +11,7 @@ library("readxl")
 library(dplyr)
 
 #Upload data
-data = read_excel("Ametop-PE data(new-Alex)(1control 2study).xlsx")
+data <- read_excel("data/Ametop-PE data(new-Alex)(1control 2study).xlsx")
 
 #Remove withdrawn patients
 data <- data[data$`Withdrawn after consent?` != "Yes", ]
@@ -32,6 +32,7 @@ data <- select(data,
                -`Time of skin puncture`,
                -`Record ID`,
                -`Complete?`,
+               -`Withdrawn after consent?`,
                -`Reason for withdrawal`,
                -`Other reason for withdrawal`)
 
@@ -44,7 +45,7 @@ missing_values_summary <- data %>%
   select(-Notes, -`Observed side effects`) %>%
   summarise_all(~sum(is.na(.)))
 
-#No missing values found
+# No missing values found
 print(missing_values_summary)
 
 ```
