--- a/src/06_ametop_first_report.Rmd
+++ b/src/06_ametop_first_report.Rmd
@@ -194,7 +194,7 @@ pie(side_effects_observed_summary,
     labels = labels)
 ```
 
-# Pie chart for Observed side effects (Redness, Itching, Pain)
+# Pie chart for Observed side effects (Redness, Itching, Pain, Puffiness)
 ```{r}
 # Filter out missing values and create a data frame with only the side effects
 side_effects_data <- data.frame(SideEffects = na.omit(data$`Observed side effects`))
@@ -208,17 +208,17 @@ categorize_effects <- function(effect) {
     Pain = "pain|painful",
     Puffiness = "puffy"
   )
-  
+
   identified_categories <- character(0)
-  
+
   # Negation patterns
   pattern_start <- "\\b(no|not)\\s+("
   pattern_middle <- ")\\b|(no|not)\\s+\\w+\\s+or\\s+("
   pattern_end <- ")"
-  
+
   for (category_name in names(categories)) {
     symptom_pattern <- categories[[category_name]]
-    
+
     # Check for the symptom but exclude if negated
     if (grepl(symptom_pattern, effect_lower)) {
       negation_pattern <- paste0(pattern_start, symptom_pattern, pattern_middle, symptom_pattern, pattern_end)
@@ -227,12 +227,12 @@ categorize_effects <- function(effect) {
       }
     }
   }
-  
+
   # Return "Other" if no category is found
   if (length(identified_categories) == 0) {
     return("Other")
   }
-  
+
   return(identified_categories)
 }
 
