--- a/src/06_ametop_first_report.Rmd
+++ b/src/06_ametop_first_report.Rmd
@@ -59,23 +59,6 @@ print(missing_values_summary)
 ```
 
 ```{r}
-# Print rows with notes
-# print(data[!is.na(data$Notes), ])
-
-# Define keywords that suggest a mismatch between FPS-R score and observer score
-# mismatch_keywords <- c("mischievous", "histrionic", "game", "understand scoring scale",
-#                        "said ow", "did not feel", "dramatic")
-
-# Create a pattern string to search for any of the keywords
-# pattern <- paste(mismatch_keywords, collapse = "|")
-
-# Use grep to find rows that match the pattern
-# rows_to_exclude <- grep(pattern, data$Notes, ignore.case = TRUE)
-# print(data[rows_to_exclude,])
-# print(data[-rows_to_exclude,])
-```
-
-```{r}
 # Shorten the data
 data$`Reaction to skin puncture` <- gsub("^Slight.*", "Slight Pain", data$`Reaction to skin puncture`)
 data$`Reaction to skin puncture` <- gsub("^Severe.*", "Severe Pain", data$`Reaction to skin puncture`)
@@ -87,11 +70,20 @@ table(data$`Reaction to skin puncture`)
 ## Data preprocessing
 
 ```{r}
-# Create new variables 'Observer Number' for the dataset
+# Create new variables for the dataset
+
+# Create 'Observer Number'
 data$`Observer Number` <- case_when(
   data$`Reaction to skin puncture` == "None" ~ 1,
   data$`Reaction to skin puncture` == "Slight Pain" ~ 2,
   data$`Reaction to skin puncture` == "Severe Pain" ~ 3
+)
+
+# Create 'FPS-R Number'
+data$`FPS-R Number` <- case_when(
+  data$`FPS-R score` %in% c(0, 2) ~ 1,
+  data$`FPS-R score` %in% c(4, 6) ~ 2,
+  data$`FPS-R score` %in% c(8, 10) ~ 3
 )
 ```
 
@@ -205,7 +197,8 @@ pie(side_effects_observed_summary,
 # Pie chart for Observed side effects (Redness, Itching, Pain, Puffiness)
 ```{r}
 # Filter out missing values and create a data frame with only the side effects
-side_effects_data <- data.frame(SideEffects = na.omit(original_data$`Observed side effects`))
+side_effects_data_control_group <- data.frame(SideEffects = na.omit(original_data[original_data$Randomization == 1,]$`Observed side effects`))
+side_effects_data_study_group <- data.frame(SideEffects = na.omit(original_data[original_data$Randomization == 2,]$`Observed side effects`))
 
 # Define the categorization function
 categorize_effects <- function(effect) {
@@ -244,48 +237,36 @@ categorize_effects <- function(effect) {
   return(identified_categories)
 }
 
-# Apply the categorization function and create a list of categories for each side effect
-side_effects_data$Categories <- sapply(side_effects_data$SideEffects, categorize_effects, USE.NAMES=FALSE)
-print(data.frame(side_effects_data$SideEffects,
-                 sapply(side_effects_data$Categories, paste, collapse = ", ")))
+# create pie charts for the control group and the study group
+groups <- list(side_effects_data_control_group, side_effects_data_study_group)
+for (side_effects_data in groups) {
+  group_name <- ifelse(identical(side_effects_data, side_effects_data_control_group), "Control Group", "Study Group")
 
-# Pie Chart 1
-# Combination Categories
-all_combination_categories <- sapply(side_effects_data$Categories, paste, collapse = " + ")
+  # Apply the categorization function and create a list of categories for each side effect
+  side_effects_data$Categories <- sapply(side_effects_data$SideEffects, categorize_effects, USE.NAMES=FALSE)
+  side_effects_data$Categories <- lapply(side_effects_data$Categories, paste, collapse = ", ")
+  print(data.frame(side_effects_data$SideEffects, side_effects_data$Categories))
 
-# Count the occurrences of each category
-combination_category_counts <- table(all_combination_categories)
+  # Pie chart for individual categories
+  all_categories <- unlist(side_effects_data$Categories)
+  category_counts <- table(all_categories)
+  percentages <- round(category_counts / sum(category_counts) * 100, 1)
+  labels <- paste(names(category_counts), " - ", percentages, "%", sep="")
+  pie(category_counts,
+      main = paste("Individual Side Effects Distribution -", group_name),
+      col = rainbow(length(category_counts)),
+      labels = labels,
+      cex = 0.8)
 
-# Calculate the percentage for each category
-combination_category_percentages <- round(combination_category_counts / sum(combination_category_counts) * 100, 1)
-
-# Create labels that include both the category name and the percentage
-combination_labels <- paste(names(combination_category_counts), " - ", combination_category_percentages, "%", sep="")
-
-# Create a pie chart with percentages
-pie(combination_category_counts,
-    main = "Combination Side Effects Distribution",
-    col = rainbow(length(combination_category_counts)),
-    labels = combination_labels,
-    cex = 0.8)
-
-# Pie Chart 2
-# Flatten the list into a vector
-all_categories <- unlist(side_effects_data$Categories)
-
-# Count the occurrences of each category
-category_counts <- table(all_categories)
-
-# Calculate the percentage for each category
-percentages <- round(category_counts / sum(category_counts) * 100, 1)
-
-# Create labels that include both the category name and the percentage
-individual_labels <- paste(names(category_counts), " - ", percentages, "%", sep="")
-
-# Create a pie chart with percentages
-pie(category_counts,
-    main = "Individual Side Effects Distribution",
-    col = rainbow(length(category_counts)),
-    labels = individual_labels,
-    cex = 0.8)
+  # Pie chart for combination categories
+  all_combination_categories <- sapply(side_effects_data$Categories, paste, collapse = " + ")
+  combination_category_counts <- table(all_combination_categories)
+  combination_category_percentages <- round(combination_category_counts / sum(combination_category_counts) * 100, 1)
+  combination_labels <- paste(names(combination_category_counts), " - ", combination_category_percentages, "%", sep="")
+  pie(combination_category_counts,
+      main = paste("Combined Side Effects Distribution -", group_name),
+      col = rainbow(length(combination_category_counts)),
+      labels = combination_labels,
+      cex = 0.8)
+}
 ```
